fix gallery vertical alignment

--- a/themes/fonorobert.com-theme/assets/css/lightbox.css
+++ b/themes/fonorobert.com-theme/assets/css/lightbox.css
@@ -5,7 +5,7 @@
   max-width: 100%;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  align-items: baseline;
+  align-items: center;
 }
 
 .gallery figure {
